--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 title: Nihal Abdulla M
-logo: WhatsApp Image 2025-09-20 at 9.42.24 PM.jpeg
+logo: Gemini_Generated_Image_qf1jmsqf1jmsqf1j.png
 theme: jekyll-theme-minimal
